# ctrl-freak

./: .gitignore  .last-branch  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  prompt.md  pyproject.toml  ralph.sh
.claude/commands/: prd.md  ralph.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  __init__.py  config.py  metrics.py  render.py  reproduce.py  run.py  stats.py
benchmarks/harness/: __init__.py  multi_objective.py  operators.py  single_objective.py
benchmarks/problems/: __init__.py  multi_objective.py  single_objective.py
benchmarks/results/: benchmark_results.json
benchmarks/zdt/: __init__.py  problems.py  run_benchmark.py
benchmarks/zdt/results/: benchmark_results.json  benchmark_results_before_fix.json
docs/: api.md  contracts.md  index.md  usage.md  validation.md
scratchpad/: ctrl-freak-guide.md  rng_reproducibility.md
src/ctrl_freak/: __init__.py  algorithm.py  operators.py  population.py  primitives.py  protocols.py  registry.py  results.py  standard_operators.py
src/ctrl_freak/algorithms/: __init__.py  ga.py  nsga2.py
src/ctrl_freak/operators/: __init__.py  base.py  selection.py  standard.py
src/ctrl_freak/primitives/: __init__.py  pareto.py
src/ctrl_freak/selection/: __init__.py  crowded.py  roulette.py  tournament.py
src/ctrl_freak/survival/: __init__.py  elitist.py  nsga2.py  truncation.py
tests/: conftest.py  test_algorithm.py  test_evaluate_batch.py  test_ga.py  test_nsga2.py  test_operators.py  test_population.py  test_primitives.py  test_registry.py  test_results.py  test_rng_unify.py  test_robustness.py  test_selection.py  test_standard_operators.py  test_survival.py
tests/benchmarks/: __init__.py  test_doctests.py  test_metrics.py  test_mo_harness.py  test_multi_objective_problems.py  test_operators.py  test_single_objective_problems.py  test_so_harness.py  test_stats.py
