[project]
name = "ctrl-freak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
]


[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",       # tests
    "pytest-cov>=6.2.1",
    "ruff>=0.12",        # linter + formatter
]

# -----------------------
# Ruff (lint + format)
# -----------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["notebooks/", "experiments/"]

[tool.ruff.lint]
# Errors, warnings, naming, imports, modern py, bugbear, comprehensions, simplify
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", # let formatter handle wrapping
    "N803", # allow X, Y for ML-style params
    "N806", # allow X, Y for local vars
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------
# ty (fast static type checker)
# -----------------------
[tool.ty]
[tool.ty.rules]
possibly-unresolved-reference = "warn"

# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--ignore=notebooks/",
    "--ignore=experiments/",
]

[tool.uv.sources]
# transfer-learning-publication = { git = "https://github.com/CooperBigFoot/transfer-learning-publication.git", rev = "main" }
